# ImmunotherapyPredictionRNAseq

./: .gitignore  README.md  cache_data.py  clean_runs.py  main.py  pyproject.toml
immunotherapypredictionrnaseq/: aggregator.py  data.py  embedder.py  encoder.py  io.py  loss.py  model.py  projector.py  scorer.py  tokenizer.py  utils.py
tests/: test_aggregator.py  test_data.py  test_embedder.py  test_encoder.py  test_integration_model_run.py  test_model.py  test_projector.py
tests/integration/: test_model_run.py
tests/unit/: test_data.py  test_model.py  test_scorer.py  test_utils.py
token_config/: broad_celltype_pathways.tsv  cancer_types.tsv  conception_processed.tsv  gene_tokens_long.tsv  gene_tokens_short.tsv  genes.tsv  genesets+genes.tsv  genesets.tsv
